# AdventOfCodeCPP

./: .gitignore
2021/: CMakeLists.txt  main.cpp
2021/Day1/: day1.cpp  day1.h
2021/Day10/: day10.cpp  day10.h
2021/Day11/: day11.cpp  day11.h
2021/Day2/: day2.cpp
2021/Day3/: day3.cpp  day3.h
2021/Day4/: day4.cpp
2021/Day5/: day5.cpp  day5.h
2021/Day6/: day6.cpp  day6.h
2021/Day7/: day7.cpp  day7.h
2021/Day8/: day8.cpp  day8.h
2021/Day9/: day9.cpp  day9.h
2022/: CMakeLists.txt  main.cpp
2022/Day1/: day1.cpp
2022/Day2/: day2.cpp  day2.h
2022/Day3/: day3.cpp
2022/Day4/: day4.cpp  day4.h
